# shorts-factory

./: .gitignore  README.md  app.py  config.local.example.yaml  config.yaml  github_pages_setup.md  pyproject.toml  run.bat  run.ps1  run_test.py  test_cudnn.py  test_whisper_large.py  test_whisper_minimal.py  tiktok_setup.md  verify_youtube_setup.py  youtube_setup.md
.streamlit/: config.toml
docs/: index.html  privacy.html  style.css  terms.html  tiktokyTdnGh44bvydFU9qNdQRfSaqyaQ9hp61.txt
docs/tiktok/: callback.html
music/: README.md
pipeline/: analyze.py  audio_mix.py  batch_queue.py  clip_scorer.py  color_grade.py  cut.py  hf_downloader.py  ingest.py  intro_outro_detector.py  music_gen.py  music_test_runner.py  narration.py  post_effects.py  preflight.py  reframe.py  render.py  seo_generator.py  silence_cut.py  subtitle.py  thumbnail.py  tiktok_upload.py  transcribe.py  utils.py  vocal_isolation.py  worker.py  youtube_upload.py
pipeline/music_backends/: __init__.py  ace_step.py  base.py  stable_audio_open.py
prompts/: analyze_segments.md  narration_script.md
scripts/: start_ollama_for_factory.ps1
tests/: test_analyze_llm_handling.py  test_music_rights_manifest.py  test_seo_generator.py  test_tiktok_upload.py  test_utils_config.py
tools/: acestep_download.py  acestep_worker.py
